--- a/decoracion.css
+++ b/decoracion.css
@@ -152,6 +152,20 @@ div{
   img{
    max-width: 80% ;
    height: auto;
-   object-fit: contain ;
+   object-fit: contain;
    border-radius: 0.5rem;
+  }
+  .titulohide{
+    color: #3f3f3f;
+    font-size: 50px;
+    align-items: center;
+    padding: 20px;
+    padding-left: 100px;
+  }
+  button{
+    padding: 10px;
+    border-radius: 0.5rem;
+    font-size: larger;
+    text-decoration: none;
+    text-decoration-color: #1d2022;
   }
