--- a/decoracion.css
+++ b/decoracion.css
@@ -155,3 +155,17 @@ div{
    object-fit: contain;
    border-radius: 0.5rem;
   }
+  .titulohide{
+    color: #3f3f3f;
+    font-size: 50px;
+    align-items: center;
+    padding: 20px;
+    padding-left: 100px;
+  }
+  button{
+    padding: 10px;
+    border-radius: 0.5rem;
+    font-size: larger;
+    text-decoration: none;
+    text-decoration-color: #1d2022;
+  }
